<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search">Search</string>
    <string name="city_name">City Name</string>
    <string name="temperature">Temperature</string>
    <string name="weatherimage">WeatherImage</string>
    <string name="search_history">search history</string>
    <string-array name="cities">
        <item>Biaroza</item>
        <item>Minsk</item>
        <item>Brest</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_simple_weather_application">Welcome to simple weather application</string>
    <string name="go_to_search">go to search</string>
    <string name="home">home</string>
    <string name="the_next_5_days">The next 5 days</string>
    <string name="_0_c">0*C</string>
    <string name="dayofweek">dayOfWeek</string>
    <string name="wind_status">Wind Speed</string>
    <string name="_5mps">5mps</string>
    <string name="air_pressure">Air pressure</string>
    <string name="_0">0%</string>
    <string name="humidity">Humidity</string>
    <string name="cloudly">Cloudly</string>
    <string name="title_location_permission">Location</string>
    <string name="text_location_permission">We need location to automatically check your current weathe</string>
    <string name="ok">ok</string>
    <string name="visibility">Visibility</string>
    <string name="next_15_hours">Next 15 hours</string>
    <string name="forecast">Forecast</string>
</resources>